# code-analyzer

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  test.sh
src/: __init__.py  main.py
src/config/: exception_config.py  settings.py
src/rest/: __init__.py  analyze.py  health.py
src/schema/: __init__.py  request.py  response.py
src/services/: __init__.py  code_parser.py  llm_analyzer.py  report_generator.py  sse_helper.py  startup_analyzer.py  zip_handler.py
src/services/sandbox/: __init__.py  docker_sandbox.py  project_runner.py  test_runner.py
src/util/: __init__.py  file_utils.py
